Closed Bug 1181220 Opened 9 years ago Closed 9 years ago

Stagefright: CHECK(!"should not be here.") failed in MPEG4Extractor.cpp

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox45 --- fixed

People

(Reporter: tsmith, Assigned: mozbugz)

References

Details

(Keywords: crash, testcase, Whiteboard: checkin after 1181719, 1181223 but before 1181215, 1181213)

Attachments

(3 files, 2 obsolete files)

Attached video test_case.mp4
A/MPEG4Extractor(34357): /builds/slave/m-cen-l64-asan-d-ntly-00000000/build/src/media/libstagefright/frameworks/av/media/libstagefright/MPEG4Extractor.cpp:354 CHECK(!"should not be here.") failed.
Summary: CHECK(!"should not be here.") failed in MPEG4Extractor.cpp → Stagefright: CHECK(!"should not be here.") failed in MPEG4Extractor.cpp
Component: Audio/Video → Audio/Video: Playback
Gerald, here's another Stagefright bug.
Assignee: nobody → gsquelart
Priority: -- → P1
Attached patch 1181220-gtest.patch (obsolete) — Splinter Review
Part 1: Added gtest case.
Attachment #8683545 - Flags: review?(giles)
Attached patch 1181220-check-MIME-types.patch (obsolete) — Splinter Review
Part 2: Check if MIME types are valid.
Attachment #8683546 - Flags: review?(giles)
Attachment #8683545 - Flags: review?(giles) → review+
Comment on attachment 8683546 [details] [diff] [review]
1181220-check-MIME-types.patch

Review of attachment 8683546 [details] [diff] [review]:
-----------------------------------------------------------------

::: media/libstagefright/frameworks/av/media/libstagefright/MPEG4Extractor.cpp
@@ +1026,4 @@
>              }
> +            const char* mime = FourCC2MIME(original_fourcc);
> +            if (!mime) {
> +                return ERROR_MALFORMED;

This could be just an unrecognized type, not a malformed one. It might be nice to distinguish?
Attachment #8683546 - Flags: review?(giles) → review+
Clarified check-in comment, no actual changes; carrying r+.
Attachment #8683545 - Attachment is obsolete: true
Attachment #8684000 - Flags: review+
As per review suggestion, changed error code constant to ERROR_UNSUPPORTED when stumbling upon an unknown MIME type. Carrying r+.
Attachment #8683546 - Attachment is obsolete: true
Attachment #8684001 - Flags: review+
Check-in in this order: bug 1181719, bug 1181223, bug 1181220, bug 1181215, bug 1181213
try: https://treeherder.mozilla.org/#/jobs?repo=try&revision=20e7b755a695
Keywords: checkin-needed
Whiteboard: checkin after 1181719, 1181223 but before 1181215, 1181213
https://hg.mozilla.org/mozilla-central/rev/a5555f3b9712
https://hg.mozilla.org/mozilla-central/rev/7964a5a4b0bd
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: