Bug 1181220 - p2: Check if MIME types are valid - r=rillian